--- a/style.css
+++ b/style.css
@@ -23,13 +23,56 @@ body {
   padding: 24px;
 }
 
+.home-container {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+/* navbar styling */
+.hamburger-menu, .hamburger-menu-close {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: transparent;
+  color: #fff;
+  border: none;
+  font-size: 20px;
+  z-index: 10;
+}
+
+.hamburger-menu-close {
+  display: none;
+}
+
+.navbar {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  left: 0;
+  background: rgba( 0, 0, 0, 0.85);
+  width: 100%;
+  height: 100%;
+
+}
+
+.navbar ul {
+  display: inline-block;
+  max-height: 100%;
+}
+
 .navbar ul li {
   margin-bottom: 5px;
+  text-align: center;
+  list-style: none;
 }
 
 .navbar ul li a {
   text-decoration: none;
-  color: rgb(242, 94, 255);
+  color: #fff;
+  font-size: 32px;
 }
 
 .social-links {
@@ -49,12 +92,6 @@ body {
 .social-links-icon a {
   color: #fff;
   text-decoration: none;
-}
-
-.home-container {
-  display: flex;
-  flex-direction: column;
-  position: relative;
 }
 
 .home-content {
