--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
     rgba(14, 12, 46, 1) 69%,
     rgba(0, 1, 37, 1) 100%
   );
-  background-image: url('/images/starynightimage.jpg');
+  background-image: url('/images/nightlakeimage.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   /* height: 100vh; */
@@ -39,10 +39,11 @@ body {
   border: none;
   font-size: 20px;
   z-index: 10;
+  display: none;
 }
 
-.hamburger-menu-close {
-  display: none;
+.active {
+  display: block;
 }
 
 .navbar {
@@ -51,11 +52,15 @@ body {
   justify-content: center;
   align-items: center;
   top: 0;
-  left: 0;
+  left: calc(-100% - 24px);
   background: rgba( 0, 0, 0, 0.85);
   width: 100%;
   height: 100%;
+  transition: left 1s cubic-bezier(1,0,0,1);
+}
 
+.navbar-open{
+  left: 0;
 }
 
 .navbar ul {
