--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 
-.home {
+.section-container {
   background: rgb(71, 19, 74);
   background: linear-gradient(
     0deg,
@@ -19,18 +19,20 @@ body {
   background-image: url('/images/nightlakeimage.jpg');
   background-size: cover;
   background-repeat: no-repeat;
-  /* height: 100vh; */
+  height: 100vh;
   padding: 24px;
 }
 
-.home-container {
+.container {
   display: flex;
   flex-direction: column;
   position: relative;
+  height: 100%;
 }
 
 /* navbar styling */
-.hamburger-menu, .hamburger-menu-close {
+.hamburger-menu,
+.hamburger-menu-close {
   position: absolute;
   top: 0;
   left: 0;
@@ -53,13 +55,13 @@ body {
   align-items: center;
   top: 0;
   left: calc(-100% - 24px);
-  background: rgba( 0, 0, 0, 0.85);
+  background: rgba(0, 0, 0, 0.85);
   width: 100%;
   height: 100%;
-  transition: left 1s cubic-bezier(1,0,0,1);
+  transition: left 1s cubic-bezier(1, 0, 0, 1);
 }
 
-.navbar-open{
+.navbar-open {
   left: 0;
 }
 
@@ -118,18 +120,22 @@ body {
   margin-bottom: 24px;
 }
 
-.home-content-title {
+.content-title {
+  display: flex;
   margin-bottom: 8px;
   font-size: 32px;
+  color: #fff;
+  justify-content: center;
 }
 
-.home-content-subtitle {
+.content-subtitle {
   margin-bottom: 16px;
   font-size: 24px;
 }
 
-.home-content-description {
+.content-description {
   font-size: 16px;
   line-height: 24px;
   text-align: center;
+  color: #fff;
 }
