--- a/styling/experience.css
+++ b/styling/experience.css
@@ -1,15 +1,15 @@
-.coder-academy {
+.experience-content {
   color: #fff;
   margin-top: 36px;
   text-align: left;
 }
 
-.coder-academy h1 {
+.experience-content h1 {
   margin-bottom: 8px;
   border-bottom: 1px solid var(--primary-pink);
   display: inline-block;
 }
 
-.coder-academy span {
+.experience-content span {
   color: var(--primary-pink);
 }
